# mm-rec

./: .cursorrules  .gitignore  ACCURACY_FIX_SUMMARY.md  ASSEMBLY_BENCHMARK_RESULTS.md  ASSEMBLY_OPTIMIZATIONS.md  CODE_STRUCTURE.md  CORE_FORMULA_SPEC.md  CPP_BUILD_SUCCESS.md  CPP_IMPLEMENTATION_STATUS.md  CPP_LIBRARY_TEST_COMPLETE.md  CPP_LIBRARY_TEST_STATUS.md  CPP_OPTIMIZATION_COMPLETE.md  CPP_OPTIMIZATION_PLAN.md  CPP_TEST_SUMMARY.md  CPU_CPP_LIBRARY_PLAN.md  CPU_OPTIMIZATIONS_REPORT.md  CPU_TRAINING_GUIDE.md  CURRENT_STATUS_REPORT.md  DEEP_CPU_ANALYSIS.md  DPG_INTEGRATION_CODE.md  ENGINEERING_OUTPUTS.md  EVALUATION_GUIDE.md  EXTENSION_REQUIREMENTS.md  FINAL_DECISION_REPORT.md  FINAL_IMPLEMENTATION_DECISION.md  FINAL_PERFORMANCE_REPORT.md  FINAL_PROJECT_SUMMARY.md  GITHUB_SETUP.md  HEM_INTEGRATION_CODE.md  IMPLEMENTATION_PROMPTS.md  IMPLEMENTATION_SPEC.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_PLAN.md  INFINITE_CONTEXT_READINESS_REPORT.md  KERNEL_AND_TRAINING_REQUIREMENTS.md  LLM_LEARNING_COMPARISON.md  MEMORY_FIX_REPORT.md  MKL_INSTALLATION_GUIDE.md  MKL_VS_EIGEN.md  MMREC_100M_MLOPS_SPEC.md  (+78 more)
mm-rec-cpp/: BUILD.md  CMakeLists.txt  README.md
mm-rec-cpp-eigen/: .cleanup_done  .gitignore  CMakeLists.txt  GPU_SUPPORT.md  HARDWARE_DISCOVERY.md  PGO_OPTIMIZATION.md  README.md  auto_test.ini  bench_log  bench_metrics  bench_trace  benchmark_final_suite  benchmark_hardware  benchmark_logging.cpp  benchmark_shader_opt  check_vocab  check_vocab.cpp  cold_run.ini  config.example.ini  config.txt  config_adaptive.txt  config_bench_adamw.txt  config_bench_flux.txt  config_bench_safe_adamw.txt  config_bench_safe_flux.txt  config_flux.txt  config_nano.txt  config_optimized.txt  config_stress.txt  config_tiny.txt  convert_tinystories.py  create_binary_data.py  create_dummy_data  create_dummy_data.cpp  create_pattern_data.py  demo_auto  demo_create_scope  demo_di_full  demo_diagnostic  demo_errors  (+35 more)
mm-rec-cpp-eigen/configs/: config_adaptive.txt  config_nano.txt  config_small.txt
mm-rec-cpp-eigen/docs/: METRICS.md
mm-rec-cpp-eigen/examples/: fluent_infrastructure_example.cpp  metrics_usage_inference.cpp  metrics_usage_training.cpp
mm-rec-cpp-eigen/include/mm_rec/application/: dashboard_manager.h  diagnostic_dashboard.h  i_run_manager.h  i_training_monitor.h  run_manager.h  service_configurator.h
mm-rec-cpp-eigen/include/mm_rec/business/: alert_manager.h  checkpoint.h  i_checkpoint_manager.h  metric_types.h  metrics.h
mm-rec-cpp-eigen/scripts/: README.md  build_and_run.sh  cleanup_processes.sh  cleanup_silent.sh  run_ui_tests.sh  start_daemon.sh  start_server.sh  stop_server.sh  update_includes.py
mm-rec-cpp-eigen/src/: demo_training_cpp.cpp  inference_demo.cpp  mm_rec_cli.cpp  preprocess_data.cpp  test_overfit.cpp  train_adaptive.cpp  train_kernel.cpp
mm-rec-cpp-eigen/src/application/: dashboard_manager.cpp  run_manager.cpp  session.cpp
mm-rec-cpp-eigen/src/business/: checkpoint.cpp
mm-rec-cpp-eigen/src/cli/: cmd_infer.cpp  cmd_parse_metrics.cpp  cmd_prepare.cpp  cmd_server.cpp  cmd_train.cpp  cmd_view_trace.cpp  commands.h
mm-rec-cpp-eigen/src/config/: model_config.cpp
mm-rec-cpp-eigen/src/core/: auto_tuner.cpp  dynamic_balancer.cpp  gated_memory.cpp  global_allocator.cpp  linear.cpp  normalization.cpp  tensor.cpp
mm-rec-cpp-eigen/src/dashboard/: CMakeLists.txt  app.js  embedded_assets.h  embedded_assets.h.in  index.html  ops.html  style.css
mm-rec-cpp-eigen/src/data/: data_loader.cpp  dataset.cpp  tokenizer.cpp
mm-rec-cpp-eigen/src/infrastructure/: config.cpp
mm-rec-cpp-eigen/src/jobs/: job_training.cpp
mm-rec-cpp-eigen/src/model/: mm_rec_block.cpp  mm_rec_model.cpp  moe.cpp
mm-rec-cpp-eigen/src/shaders/: matmul.spv  matmul_16x16.comp  matmul_2x2.comp  matmul_2x2.spv  matmul_32x32.comp  matmul_32x32.spv  matmul_4x4.comp  matmul_4x4.spv  matmul_8x8.comp  matmul_8x8.spv  matmul_fp16.comp  matmul_fp16.spv  matmul_packed.comp  matmul_packed.spv  matmul_prefetch.comp  matmul_prefetch.spv  matmul_regblock.comp  matmul_regblock.spv  matmul_subgroup.comp  matmul_subgroup.spv  matmul_vec4.comp  matmul_vec4.spv
mm-rec-cpp-eigen/src/tools/: prepare_instruction_data.cpp
mm-rec-cpp-eigen/src/training/: backward.cpp  gradient_utils.cpp  gru_backward.cpp  optimizer_factory.cpp  sample_tracker.cpp  scheduler.cpp  trainer.cpp  uboo_loss.cpp
mm-rec-cpp-eigen/src/utils/: checkpoint.cpp  config.cpp  dashboard_manager.cpp  run_manager.cpp  session.cpp
mm-rec-cpp-eigen/tests/: benchmark_final_suite.cpp  benchmark_hardware.cpp  benchmark_logger_overhead.cpp  benchmark_metrics_overhead.cpp  benchmark_shader_opt.cpp  benchmark_tokenizer.cpp  benchmark_trace_overhead.cpp  debug_dataloader.cpp  debug_overfit.cpp  demo_auto_trace.cpp  demo_create_scope.cpp  demo_di_diagnostics.cpp  demo_di_full_integration.cpp  demo_diagnostic_trace.cpp  demo_distributed_tracing.cpp  demo_enhanced_errors.cpp  demo_factory_pattern.cpp  demo_interface_di.cpp  demo_memory_protection.cpp  demo_request_context.cpp  demo_request_di.cpp  demo_request_di_simple.cpp  demo_ui.cpp  hardware_probe.cpp  phase3_api_test.sh  phase4_api_test.sh  test_adversarial.cpp  test_backward.cpp  test_block_backward.cpp  test_checkpoint.cpp  test_compressed_integration.cpp  test_compression_benchmark.cpp  test_config_driven_server.cpp  test_data_pipeline.cpp  test_di_container.cpp  test_di_scoped.cpp  test_e2e_server.cpp  test_error_handling.cpp  test_flux_optimizer.cpp  test_forward_cache.cpp  (+32 more)
mm-rec-cpp-eigen/tests/ui/: package-lock.json  package.json  test_dashboard_e2e.js
mm-rec-cpp-pure/: CMakeLists.txt  README.md
mm-rec-cpp-pure/src/core/: linear.cpp  tensor.cpp
mm-rec-cpp-pure/tests/: test_gated_memory.cpp
mm-rec-cpp/src/: inference_main.cpp
mm-rec-cpp/src/core/: gated_memory.cpp  log_sum_exp.cpp
mm-rec-cpp/src/layers/: memory_state.cpp  mm_rec_block.cpp  uboo_output.cpp
mm-rec-cpp/src/utils/: checkpoint.cpp
mm-rec-cpp/tests/: CMakeLists.txt  benchmark.cpp  test_gated_memory.cpp  test_log_sum_exp.cpp  test_mm_rec_model.cpp  test_per_layer_state.cpp  test_session.cpp  test_uboo.cpp
(+348 files in other folders)
